syntax = "proto3";

package api.administrator.v1;

option go_package = "austin-v2/api/administrator/v1;v1";
option java_multiple_files = true;
option java_package = "api.administrator.v1";

service Administrator {
	rpc CreateAdministrator (CreateAdministratorRequest) returns (AdministratorInfoResponse);
	rpc UpdateAdministrator (UpdateAdministratorRequest) returns (AdministratorInfoResponse);
	rpc GetAdministrator (GetAdministratorRequest) returns (AdministratorInfoResponse);
	rpc ListAdministrator (ListAdministratorRequest) returns (ListAdministratorReply);
	rpc DeleteAdministrator (DeleteAdministratorRequest) returns (CheckReply);
	rpc RecoverAdministrator (RecoverAdministratorRequest) returns (CheckReply);
	rpc VerifyAdministratorPassword(VerifyAdministratorPasswordRequest) returns (CheckReply);
	rpc AdministratorLoginSuccess(AdministratorLoginSuccessRequest) returns (CheckReply);
	rpc AdministratorStatusChange(AdministratorStatusChangeRequest) returns (CheckReply);
}

message CreateAdministratorRequest {
	int64 id = 1;
	string username = 2;
	string password = 3;
	string mobile = 4;
	string nickname = 5;
	string avatar = 6;
	int64 status = 7;
	string role = 8;
}

message UpdateAdministratorRequest {
	int64 id = 1;
	string username = 2;
	string password = 3;
	string mobile = 4;
	string nickname = 5;
	string avatar = 6;
	int64 status = 7;
	string role = 8;
}

message DeleteAdministratorRequest {
	int64 id = 1;
}

message RecoverAdministratorRequest {
	int64 id = 1;
}

message GetAdministratorRequest {
	int64 id = 1;
	string username = 2;
	string mobile = 3;
	int64 status = 4;
	string role = 5;
}

message ListAdministratorRequest {
	int64 page = 1;
	int64 page_size = 2;
	string username = 3;
	string mobile = 4;
	string nickname = 5;
	int64 status = 6;
	string created_at_start = 7;
	string created_at_end = 8;
}
message ListAdministratorReply {
	int64 total = 1;
	repeated AdministratorInfoResponse list = 2;
}

message AdministratorInfoResponse {
	int64 id = 1;
	string username = 2;
	string mobile = 3;
	string nickname = 4;
	string avatar = 5;
	int64 status = 6;
	string role = 7;
	string last_login_time = 8;
	string last_login_ip = 9;
	string created_at = 10;
	string updated_at = 11;
	string deleted_at = 12;
}


message VerifyAdministratorPasswordRequest {
	int64 id = 1;
	string password = 2;
}

message AdministratorLoginSuccessRequest {
	int64 id = 1;
	string last_login_time = 2;
	string last_login_ip = 3;
}

message AdministratorStatusChangeRequest {
	int64 id = 1;
	int64 status = 2;
}

message CheckReply {
	bool is_success = 1;
}
