syntax = "proto3";

package kratos.api;

import "google/protobuf/duration.proto";

option go_package = "github.com/ZQCard/kratos-base-project/app/admin/service/internal/conf;conf";

message Bootstrap {
  Trace trace = 1;
  Server server = 2;
  Data data = 3;
  Auth auth = 4;
  Service service = 5;
}

message Trace {
  string endpoint = 1;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  Database database = 1;
  Redis redis = 2;
}

message Registry {
  message Etcd {
    string address = 1;
  }
  Etcd etcd = 1;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
  int64 api_key_expire = 3;
  string casbin_model = 4;
  string casbin_source = 5;
}

message Service {
  string name = 1;
  string version = 2;
  message Administrator {
    string endpoint = 1;
  }
  Administrator administrator = 3;
  message Authorization {
    string endpoint = 1;
  }
  Authorization authorization = 4;
  message Files {
    string endpoint = 1;
  }
  Files files = 5;
}
